feat: changed structure of html

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="us">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -8,87 +8,94 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Tenor+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">	
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/about.css">
 	<title>About us</title>
 </head>
 
-<body class="body">
+<body>
 	<header class="header">
 		<nav class="header__nav">
 			<ul class="header__nav__list">
 				<li><a class="header__nav__link" href="master.html">Мастер-классы</a></li>
 				<li><a class="header__nav__link" href="index.html">Мебель на заказ</a></li>
 				<li class="logo"><img src="img/logo.svg" alt="logo"></li>
-				<li><a class="header__nav__link" href="">Контакты</a></li>
+				<li><a class="header__nav__link" href="prototype.html">Контакты</a></li>
 				<li><a class="header__nav__link" href="about.html">О нас</a></li>
 			</ul>			
 		</nav>
 	</header>
 	
     <main>
-		<section">		
-			<h1 class="title">История создания мастерской</h1>
-			<h1 class="title">NIKASON BRAND</h1>
-            <img src="img/founders.jpg" alt="founders">
-			<div>
+		<section class="history">
+			<h1 class="history_title">История создания мастерской</h1>
+			<h2>NIKASON BRAND</h2>
+			<img class="history_img" src="img/founders.jpg" alt="founders"> 		
+		</section>
+
+		<section class="history_card">	
 				<div>
-					<p class="title">+10 лет</p>
-					<p class="text">На рынке по производству мебели</p>
+					<h2>+10 лет</h2>
+					<p>На рынке по производству мебели</p>
 				</div>
 				<div>
-					<p class="title">+1500</p>
-					<p class="text">Изготовлено мебели</p>
+					<h2>+1500</h2>
+					<p>Изготовлено мебели</p>
 				</div>
 				<div>
-					<p class="title">120 лет</p>
-					<p class="text">Самой старинной мебели для реставрации</p>
-				</div>
-			</div>
+					<h2>120 лет</h2>
+					<p>Самой старинной мебели для реставрации</p>	
+			</div>     
 		</section>
 
 		<section class="founder">
-			<div>
-				<img src="img/Kolodeznikov-Matchitov.jpg" alt="Kolodeznikov-Matchitov">
-			</div>
-			<div>
-				<p class="text2">Никита Колодезников-Матчитов</p>
-				<p class="text">Основатель мастерской</p>
-				<p class="text">С детства я был окружен творческими людьми, мой дедушка был строителем и 
-                    мастером по дереву. Спустя много лет и мне передалась его любовь к дереву - в 
-                    свободное время мастерил для себя небольшие  изделия из древесины.</p>
-                <p class="text">Более десяти лет назад построил двухэтажный гараж, на втором этаже 
-                    расположилась наша мастерская. Начинал производство практически “с нуля”, 
-                    с каждой зарплаты понемногу откладывал на покупку инстурментов и станков.</p>
-                <p class="text">Постепенно начали появляться первые заказы. Несколько лет назад мы с супругой 
-                    решили еще заняться ремонтом и реставрацией мебели. Эту идею предложили 
-                    сами клиенты, поскольку периодически приходили с таким запросом. В основном, 
-                    реставрацией занимается супруга Саргылана. Мы с ней одна сплоченная, дружная 
-                    и отличная команда.
-                </p>
+			<img src="img/Kolodeznikov-Matchitov.jpg" alt="Kolodeznikov-Matchitov">
+			<div class="founder_info">
+				<div>
+					<h2 class="founder_title">Никита Колодезников-Матчитов</h2>
+				    <p class="founder_text">Основатель мастерской</p>
+				</div>
+				<p>
+					С детства я был окружен творческими людьми, мой дедушка был строителем и <br> 
+					мастером по дереву. Спустя много лет и мне передалась его любовь к дереву - в <br>
+					свободное время мастерил для себя небольшие  изделия из древесины.
+				</p>
+				<p>
+					Более десяти лет назад построил двухэтажный гараж, на втором этаже <br>
+					расположилась наша мастерская. Начинал производство практически “с нуля”, с <br>
+				    каждой зарплаты понемногу откладывал на покупку инстурментов и станков.
+				</p>
+				<p>
+					Постепенно начали появляться первые заказы. Несколько лет назад мы с супругой <br>
+					решили еще заняться ремонтом и реставрацией мебели. Эту идею предложили <br>
+					сами клиенты, поскольку периодически приходили с таким запросом. В основном, 
+					реставрацией занимается супруга Саргылана. Мы с ней одна сплоченная, дружная <br>
+					и отличная команда.
+				</p>			
+				</div>
 			</div>			
 		</section>
        
         <section class="philosophy">
-            <div>
-				<h2 class="title">Философия мастерской NIKASON</h2>
-				<p class="text3">Создавать что-то по-настоящему ценное и уникальное. Дарить радость и уют в каждый дом</p>
-			</div>
+				<h2 class="philosophy_title">Философия мастерской NIKASON</h2>
+				<p class="philosophy_text">Создавать что-то по-настоящему ценное и уникальное.<br>Дарить радость и уют в каждый дом</p>
         </section>
 
 		<section class="mass_media">
-			<h2 class="title">СМИ о нас</h2>
-			<p class="text">О нашей мастерской пишут многие издания Якутии</p>
-			<div>
-				<img src="img/mass_media1.jpg" alt="mass_media1">
-				<img src="img/mass_media2.jpg" alt="mass_media2">
-				<img src="img/mass_media3.jpg" alt="mass_media3">
-				<img src="img/mass_media4.jpg" alt="mass_media4">
-			</div>			
+			<div class="mass_media_title">
+				<h2>СМИ о нас</h2>
+				<p class="mass_media_text">О нашей мастерской пишут многие издания Якутии</p>
+			</div>	
+				<div class="mass_media_img">
+					<img src="img/mass_media1.jpg" alt="mass_media1">
+				    <img src="img/mass_media2.jpg" alt="mass_media2">
+				    <img src="img/mass_media3.jpg" alt="mass_media3">
+				    <img src="img/mass_media4.jpg" alt="mass_media4">
+				</div>			
 		</section>
         
         <section class="application">
-            <h1 class="title">Оставьте заявку и мы с вами свяжемся</h1>
-			<button class="button"><p class="button_text">Оставить заявку</p></button>
+            <h2 class="application_title">Оставьте заявку и мы с вами свяжемся</h2>
+			<button>Оставить заявку</button>
         </section>
 
 	</main>
@@ -98,18 +105,26 @@
 			<ul class="footer__nav__list">
 				<li class="footer__nav__item">
 					<p>ИП Колодезников-Матчитов Н.И.</p>
-					<p>ИНН 143515646663</p>
+			        <p>ИНН 143515646663</p>
 				</li>
+			</ul>
+			<ul class="footer__nav__list">
 				<li><a class="footer__nav__item" href="master.html">Мастер-классы</a></li>
 				<li><a class="footer__nav__item" href="index.html">Мебель на заказ</a></li>
-				<li><a class="footer__nav__item" href="">Контакты</a></li>
+			</ul>
+			<ul class="footer__nav__list">
+				<li><a class="footer__nav__item" href="prototype.html">Контакты</a></li>
 				<li><a class="footer__nav__item" href="about.html">О нас</a></li>
+			</ul>
+			<ul class="footer__nav__list">		
 				<li><a class="footer__nav__item" href="">Политика кофиденциальности</a></li>
 				<li><a class="footer__nav__item" href="">Договор оферты</a></li>
-				<li><a href=""><img src="img/instagram.svg" alt="instagram"></a></li>
-				<li><a href=""><img src="img/whatsapp.svg" alt="whatsapp"></a></li>
-				<li class="footer__nav__item"><p>+7 967 927-22-27</p></li>
 			</ul>
+			<div class="footer_social_networks"> 													
+				<a href=""><img src="img/instagram.svg" alt="instagram"></a>
+				<a href=""><img src="img/whatsapp.svg" alt="whatsapp"></a>	
+				<p class="footer__nav__item">+7 967 927-22-27</p>		
+		    </div>
 		</nav>		
 	</footer>
 </body>
