--- a/master.html
+++ b/master.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -8,18 +8,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Tenor+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/master.css">
 	<title>Master classes</title>
 </head>
 
-<body class="body">
+<body>
 	<header class="header">
 		<nav class="header__nav">
 			<ul class="header__nav__list">
 				<li><a class="header__nav__link" href="master.html">Мастер-классы</a></li>
 				<li><a class="header__nav__link" href="index.html">Мебель на заказ</a></li>
 				<li class="logo"><img src="img/logo.svg" alt="logo"></li>
-				<li><a class="header__nav__link" href="">Контакты</a></li>
+				<li><a class="header__nav__link" href="prototype.html">Контакты</a></li>
 				<li><a class="header__nav__link" href="about.html">О нас</a></li>
 			</ul>			
 		</nav>
@@ -27,158 +27,152 @@
 
 	<main>
 		<section class="main">		
-			<div>
-				<h1 class="title"><span class="span_main">Нам доверяют мебель с историей в 120 лет</span></h1>
-				<button class="button_main"><p class="button_main_text2">Смотреть мастер-классы</p></button>
-			</div>
+				<h1>Нам доверяют мебель с историей в 120 лет</h1>
+				<button class="main_button">Смотреть мастер-классы</button>
 		</section>
 
 		<section class="works">
-			<h2 class="title">Наши работы</h2>
-			<div>
+			<h2>Наши работы</h2>
+			<div class="works_cards">
 				<figure>
 					<img src="img/before_1.jpg" alt="before_1">
-					<figcaption class="text6">До</figcaption>
+					<figcaption class="works_text">До</figcaption>
 				</figure>
 				<figure>
 					<img src="img/after_1.jpg" alt="after_1">
-					<figcaption class="text6">После</figcaption>
+					<figcaption class="works_text">После</figcaption>
 				</figure>
 				<figure>
 					<img src="img/before_2.jpg" alt="before_2">
-					<figcaption class="text6">До</figcaption>
+					<figcaption class="works_text">До</figcaption>
 				</figure>
 				<figure>
 					<img src="img/after_2.jpg" alt="after_2">
-					<figcaption class="text6">После</figcaption>
+					<figcaption class="works_text">После</figcaption>
 				</figure>
 				<figure>
 					<img src="img/before_3.jpg" alt="before_3">
-					<figcaption class="text6">До</figcaption>
+					<figcaption class="works_text">До</figcaption>
 				</figure>
 				<figure>
 					<img src="img/after_3.jpg" alt="after_3">
-					<figcaption class="text6">После</figcaption>
+					<figcaption class="works_text">После</figcaption>
 				</figure>
 				<figure>
 					<img src="img/before_4.jpg" alt="before_4">
-					<figcaption class="text6">До</figcaption>
+					<figcaption class="works_text">До</figcaption>
 				</figure>
 				<figure>
 					<img src="img/after_4.jpg" alt="after_4">
-					<figcaption class="text6">После</figcaption>
+					<figcaption class="works_text">После</figcaption>
 				</figure>
 			</div>
-			<button class="button2"><p class="button_text">Смотреть больше примеров</p></button>
+			<button class="works_button">Смотреть больше примеров</button>
 		</section>
 
 		<section class="techniques">
-			<h2 class="title">Какие техники изучите на МК</h2>
-			
-			<div>
-				<div class="line"></div>
+			<h2>Какие техники изучите на МК</h2>	
 				<ul class="techniques_list">
-					<li class="text7">
-						<div class="circle"><p class="circle_text">1</p></div>
+					<div class="techniques_line"></div>	
+					<li class="techniques_list_item">
+						<div class="techniques_circle"><p>1</p></div>
 						<p>Снятие старой краски</p>
 					</li>
-					<li class="text7">
-						<div class="circle"><p class="circle_text">2</p></div>
+					<li class="techniques_list_item">
+						<div class="techniques_circle"><p>2</p></div>
 						<p>Устранение царапин и мелких дефектов</p>
 					</li>
-					<li class="text7">
-						<div class="circle"><p class="circle_text">3</p></div>
+					<li class="techniques_list_item">
+						<div class="techniques_circle"><p>3</p></div>
 						<p>Ремонт маленьких и больших сколов</p>
 					</li>
-					<li class="text7">
-						<div class="circle"><p class="circle_text">4</p></div>
+					<li class="techniques_list_item">
+						<div class="techniques_circle"><p>4</p></div>
 						<p>Ремонт поломанной и расклеившейся мебели</p>
 					</li>
-					<li class="text7">
-						<div class="circle"><p class="circle_text">5</p></div>
+					<li class="techniques_list_item">
+						<div class="techniques_circle"><p>5</p></div>
 						<p>Замена старых поврежденных деталей</p>
 					</li>
-					<li class="text7">
-						<div class="circle"><p class="circle_text">6</p></div>
+					<li class="techniques_list_item">
+						<div class="techniques_circle"><p>6</p></div>
 						<p>Приемы и идеи декора. Улучшение дизайна старой мебели</p>
 					</li>
-					<li class="text7">
-						<div class="circle"><p class="circle_text">7</p></div>
+					<li class="techniques_list_item">
+						<div class="techniques_circle"><p>7</p></div>
 						<p>Покраска изделия</p>
 					</li>
 				</ul>
-			</div>
+			
 		</section>
 
 		<section class="second_life">
-			<div>				
-				<h1 class="title"><span class="span_main">Подари вторую жизнь старой мебели и сохрани историю вашей семьи</span></h1>
+			<h2 class="second_life_title">Подари вторую жизнь старой мебели и сохрани историю вашей семьи</h2>
+		</section>
+
+		<section class="master-classes_furniture">
+			<h2>Мастер-классы по реставрации мебели</h2>
+			<div class="master-classes_furniture_cards">
+				<figure>
+					<img src="img/buffet.png" alt="buffet">
+					<figcaption class="master-classes_furniture_text">Буфет</figcaption>
+				</figure>
+				<figure>
+					<img src="img/box.png" alt="box">
+					<figcaption class="master-classes_furniture_text">Сундук</figcaption>
+				</figure>
+				<figure>
+					<img src="img/dresser.png" alt="dresser">
+					<figcaption class="master-classes_furniture_text">Комод</figcaption>
+				</figure>
+				<figure>
+					<img src="img/soviet_chair.png" alt="soviet_chair">
+					<figcaption class="master-classes_furniture_text">Советское кресло</figcaption>
+				</figure>
+				<figure>
+					<img src="img/table.png" alt="table">
+					<figcaption class="master-classes_furniture_text">Стол</figcaption>
+				</figure>
+				<figure>
+					<img src="img/chair.png" alt="chair">
+					<figcaption class="master-classes_furniture_text">Стул</figcaption>
+				</figure>
+				<figure>
+					<img src="img/chair_upholstery.png" alt="chair_upholstery">
+					<figcaption class="master-classes_furniture_text">Обивка стула</figcaption>
+				</figure>
+				<figure>
+					<img src="img/chair_repair.png" alt="chair_repair">
+					<figcaption class="master-classes_furniture_text">Ремонт стула</figcaption>
+				</figure>	
 			</div>
 		</section>
 
-		<section class="master_classes">
-			<h1 class="title">Мастер-классы по реставрации мебели</h1>
-			<div>
-				<figure>
-					<img src="img/buffet.jpg" alt="buffet">
-					<figcaption class="text8">Буфет</figcaption>
-				</figure>
-				<figure>
-					<img src="img/box.jpg" alt="box">
-					<figcaption class="text8">Сундук</figcaption>
-				</figure>
-				<figure>
-					<img src="img/dresser.jpg" alt="dresser">
-					<figcaption class="text8">Комод</figcaption>
-				</figure>
-				<figure>
-					<img src="img/soviet_chair.jpg" alt="soviet_chair">
-					<figcaption class="text8">Советское кресло</figcaption>
-				</figure>
-				<figure>
-					<img src="img/table.jpg" alt="table">
-					<figcaption class="text8">Стол</figcaption>
-				</figure>
-				<figure>
-					<img src="img/chair.jpg" alt="chair">
-					<figcaption class="text8">Стул</figcaption>
-				</figure>
-				<figure>
-					<img src="img/chair_upholstery.jpg" alt="chair_upholstery">
-					<figcaption class="text8">Обивка стула</figcaption>
-				</figure>
-				<figure>
-					<img src="img/chair_repair.jpg" alt="chair_repair">
-					<figcaption class="text8">Ремонт стула</figcaption>
-				</figure>
-			</div>
-		</section>
-
-		<section>
-			<h1 class="title">Мастер-классы по столярному делу</h1>
-			<div>
+		<section class="master-classes_carpentry">
+			<h2>Мастер-классы по столярному делу</h2>
+			<div class="master-classes_carpentry_content">
 				<figure>
 					<img src="img/console_table.jpg" alt="console_table">
-					<figcaption class="text8">Консольный столик</figcaption>
+					<figcaption class="master-classes_carpentry_text">Консольный столик</figcaption>
 				</figure>
 				<figure>
 					<img src="img/carpentry_for_beginners.jpg" alt="carpentry_for_beginners">
-					<figcaption class="text8">Столярное дело для начинающих</figcaption>
+					<figcaption class="master-classes_carpentry_text">Столярное дело для начинающих</figcaption>
 				</figure>
 			</div>
 		</section>
 
-		<section>
-			<div>
-				<h1 class="title">Руководство по редизайну деревянной мебели</h1>
-				<p class="text7">Здесь мы собрали всю информацию от подбора инстурментов и 
-                    материалов до сборки мебели и фурнитуры. Чтобы вы 
-                    самостоятельно могли разобраться с нюансами работы со старой 
-                    мебелью из дерева. Наше руководство непременно станет вашей 
+		<section class="redesign_guide">
+			<div class="redesign_guide_content">
+				<h2>Руководство по редизайну деревянной мебели</h2>
+				<p>Здесь мы собрали всю информацию от подбора инстурментов и <br>
+                    материалов до сборки мебели и фурнитуры. Чтобы вы <br>
+                    самостоятельно могли разобраться с нюансами работы со старой <br>
+                    мебелью из дерева. Наше руководство непременно станет вашей <br>
                     настольной книгой по реставрации мебели.</p>
-				<button class="button"><p class="button_text">Подробнее</p></button>
-				<img src="img/redesign.jpg" alt="redesign">
+				<button class="redesign_guide_button">Подробнее</button>
 			</div>
+			<img src="img/redesign.jpg" alt="redesign">
 		</section>
 	</main>
 
@@ -187,16 +181,22 @@
 			<ul class="footer__nav__list">
 				<li class="footer__nav__item">
 					<p>ИП Колодезников-Матчитов Н.И.</p>
-					<p>ИНН 143515646663</p>
+			        <p>ИНН 143515646663</p>
 				</li>
+			</ul>
+			<ul class="footer__nav__list">
 				<li><a class="footer__nav__item" href="master.html">Мастер-классы</a></li>
 				<li><a class="footer__nav__item" href="index.html">Мебель на заказ</a></li>
-				<li><a class="footer__nav__item" href="">Контакты</a></li>
+			</ul>
+			<ul class="footer__nav__list">
+				<li><a class="footer__nav__item" href="prototype.html">Контакты</a></li>
 				<li><a class="footer__nav__item" href="about.html">О нас</a></li>
+			</ul>
+			<ul class="footer__nav__list">		
 				<li><a class="footer__nav__item" href="">Политика кофиденциальности</a></li>
 				<li><a class="footer__nav__item" href="">Договор оферты</a></li>
 			</ul>
-			<div>													
+			<div class="footer_social_networks"> 													
 				<a href=""><img src="img/instagram.svg" alt="instagram"></a>
 				<a href=""><img src="img/whatsapp.svg" alt="whatsapp"></a>			
 		    </div>
