--- a/prototype.html
+++ b/prototype.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Tenor+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/prototype.css">
     <title>Document</title>
 </head>
 <body class="body">
@@ -17,7 +17,7 @@
 				<li><a class="header__nav__link" href="master.html">Мастер-классы</a></li>
 				<li><a class="header__nav__link" href="index.html">Мебель на заказ</a></li>
 				<li class="logo"><img src="img/logo.svg" alt="logo"></li>
-				<li><a class="header__nav__link" href="">Контакты</a></li>
+				<li><a class="header__nav__link" href="prototype.html">Контакты</a></li>
 				<li><a class="header__nav__link" href="about.html">О нас</a></li>
 			</ul>			
 		</nav>
@@ -26,109 +26,121 @@
     <main>
         <section class="home_page">
             <img src="img/master.jpg" alt="master">
-            <div>
-                <p class="text9">Столярная мастерская NIKASON BRAND</p>
-                <h1 class="title3">Изготовление и реставрация мебели</h1>
-                <p class="text10">Авторская мебель ручной работы, сделанная с душой и трепетом.</p>
-                <button class="button"><p class="button_text2">Смотреть услуги</p></button>
-            </div>
-            <div>
-                <img src="img/telegram.svg" alt="telegram">
-                <img src="img/instagram.svg" alt="instagram">
-                <img src="img/whatsapp.svg" alt="whatsapp">
-            </div>
+            <div class="home_page_info">
+                <p class="home_page_text">Столярная мастерская NIKASON BRAND</p>
+                <h1>Изготовление и реставрация мебели</h1>
+                <p>Авторская мебель ручной работы, сделанная с душой и трепетом.</p>
+                <button>Смотреть услуги</button>
+                <div class="home_page_social_network">
+                    <img src="img/telegram_2.svg" alt="telegram">
+                    <img src="img/instagram_2.svg" alt="instagram">
+                    <img src="img/whatsapp_2.svg" alt="whatsapp">
+                </div> 
+            </div> 
         </section>
 
         <section class="brand">
-            <h2 class="text11">NIKASON BRAND это</h2>
-            <div>
-                <p class="text10">Производство авторской мебели из массива</p>
-                <p class="text10">Реставрация, редизайн, ремонт деревянной мебели</p>
-                <p class="text10">Производство мебели по индивидуальным размерам</p>
+            <h2 class="brand_title">NIKASON BRAND это</h2>
+            <div class="brand_cards">
+                <p class="brand_text">Производство авторской <br> мебели из массива</p>
+                <p class="brand_text">Реставрация, редизайн, ремонт <br> деревянной мебели</p>
+                <p class="brand_text">Производство мебели по <br> индивидуальным размерам</p>
             </div>
         </section>
 
         <section class="produce">
-            <h2 class="title">Более 10 лет мы производим</h2>
-            <div>
-                <img src="img/door.png" alt="door">
-                <p class="text12">Двери</p>
-            </div>
-            <div>
-                <img src="img/closet.png" alt="closet">
-                <p class="text12">Шкафы</p>
-            </div>
-            <div>
-                <img src="img/chairs.png" alt="chairs">
-                <p class="text12">Столы и стулья</p>
-            </div>
-            <div>
-                <img src="img/drawer_1.png" alt="drawer_1">
-                <p class="text12">Комоды</p>
-            </div>
-            <div>
-                <img src="img/drawer_2.png" alt="drawer_2">
-                <p class="text12">Тумбы</p>
-            </div>
-            <div>
-                <img src="img/gate.png" alt="gate">
-                <p class="text12">Арки</p>
-            </div>
-            <div>
-                <img src="img/room-divider.png" alt="room-divider">
-                <p class="text12">Перегородки</p>
-            </div>
-            <div>
-                <img src="img/bed.png" alt="bed">
-                <p class="text12">Кровати</p>
+            <h2>Более 10 лет мы производим</h2>
+            <div class="produce_table">
+                <div class="produce_table_row">
+                    <figure class="produce_table_item">
+                        <img src="img/door.png" alt="door">
+                        <figcaption class="produce_text">Двери</figcaption>
+                    </figure>
+                    <figure class="produce_table_item">
+                        <img src="img/closet.png" alt="closet">
+                        <figcaption class="produce_text">Шкафы</figcaption>
+                    </figure>
+                    <figure class="produce_table_item">
+                        <img src="img/chairs.png" alt="chairs">
+                        <figcaption class="produce_text">Столы и стулья</figcaption>
+                    </figure>
+                    <figure class="produce_table_item">
+                        <img src="img/drawer_1.png" alt="drawer_1">
+                        <figcaption class="produce_text">Комоды</figcaption>
+                    </figure>
+                </div>
+                <div class="produce_table_row">
+                    <figure class="produce_table_item">
+                        <img src="img/drawer_2.png" alt="drawer_2">
+                        <figcaption class="produce_text">Тумбы</figcaption>
+                    </figure>
+                    <figure class="produce_table_item">
+                        <img src="img/gate.png" alt="gate">
+                        <figcaption class="produce_text">Арки</figcaption>
+                    </figure>
+                    <figure class="produce_table_item">
+                        <img src="img/room-divider.png" alt="room-divider">
+                        <figcaption class="produce_text">Перегородки</figcaption>
+                    </figure>
+                    <figure class="produce_table_item">
+                        <img src="img/bed.png" alt="bed">
+                        <figcaption class="produce_text">Кровати</figcaption>
+                    </figure>
+                </div>
             </div>
         </section>
 
-        <section class="founders">
-            <img src="img/founders_prototype.jpg" alt="founders_prototype">
-            <h2 class="title">NIKASON BRAND это семейная мастеркая</h2>
-            <p class="text2">Саргылана и Никита Колодезниковы-Матчитовы</p>
-            <p class="text7">Саргылана - рестовратор-декоратор, преображает и дарит 
-                вторую жизнь старой мебели.
-                Никита - мастер по дереву, вся мебель делается его
-                 умелыми руками.</p>
-            <button class="button"><p class="button_text"><span class="span_main">Подробнее о нас</span></p></button>     
+        <section class="founders"> 
+            <h2 class="founders_title">NIKASON BRAND это семейная мастеркая</h2>
+            <div class="founders_content">
+                <img src="img/founders_prototype.jpg" alt="founders_prototype">
+                <div class="founders_info">
+                    <p class="founders_text">Саргылана и Никита Колодезниковы-Матчитовы</p>
+                    <p>Саргылана - рестовратор-декоратор, преображает и дарит <br>
+                       вторую жизнь старой мебели. </p>
+                    <p>Никита - мастер по дереву, вся мебель делается его <br>
+                        умелыми руками.</p>
+                    <button>Подробнее о нас</button> 
+                </div>  
+            </div>    
         </section>
 
-        <section>
-            <h2 class="title">Посмотрите видео о нас</h2>
+        <section class="video">
+            <h2>Посмотрите видео о нас</h2>
             <img src="img/video.jpg" alt="video">
+            <h2>Наши услуги</h2>
         </section>
 
-        <section class="services">
-            <h2 class="title">Наши услуги</h2>
+        <section class="services">  
             <div class="service_1">
                 <img src="img/services_1.jpg" alt="services_1">
-                <p class="text2">Мебель на заказ</p>
-                <p class="text7">Мебель под заказ по индивидуальным размерам это гарантия отличного качества, долговечность, экологичность и эксклюзивность наших изделий. 
-                    Возможность создания своего неповторимого стиля, уникальность и неповторимость каждого изделия.</p>
-                <button class="button"><p class="button_text"><span class="span_main">Заказать мебель</span></p></button>    
+                <div class="services_card">
+                    <p class="services_subtitle">Мебель на заказ</p>
+                    <p class="services_text">Мебель под заказ по индивидуальным размерам это гарантия отличного качества, долговечность, экологичность и эксклюзивность наших изделий. 
+                                             Возможность создания своего неповторимого стиля, уникальность и неповторимость каждого изделия.</p>
+                    <button>Заказать мебель</button> 
+                </div>       
             </div>
             <div class="service_2">
                 <img src="img/services_2.jpg" alt="services_2">
-                <p class="text2">Мастер-классы</p>
-                <p class="text7">Что делать, если память о предках хочется сохранить, но к
-                     вашему интерьеру старая и испорченная мебель не 
-                     подходит? 
-                    Правильно, отреставрировать его и наслаждаться не только
-                     обновлённым видом мебели, но и с теплотой помнить, что 
-                     эта мебель была сделана талантливыми предками.
+                <div class="services_card">
+                    <p class="services_subtitle">Мастер-классы</p>
+                    <p class="services_text">Что делать, если память о предках хочется сохранить, но к вашему интерьеру старая и испорченная мебель не подходит? 
+                                             Правильно, отреставрировать его и наслаждаться не только обновлённым видом мебели, но и с теплотой помнить, что эта мебель была сделана талантливыми предками.
                     </p>
-                <button class="button"><p class="button_text"><span class="span_main">Купить мастер-класс</span></p></button>
+                    <button>Купить мастер-класс</button>
+                </div>
             </div>
         </section>
         
-        <section>
-            <h2 class="title">Гарантия качества мебели от NIKASON BRAND</h2>
-            <p class="text3">На каждое изделие ставим авторский логотип (клеймо) как знак качества и 
-                узнаваемости мастера. Таким образом мастер несёт ответственность за каждое 
-                изделие помеченное печатью. Есть гарантия на 12 месяцев. </p>
-            <img src="img/logo.svg" alt="logo">
+        <section class="guarantee">
+            <div class="guarantee_border">
+                <h2>Гарантия качества мебели <br> от NIKASON BRAND</h2>
+                <p class="guarantee_text">На каждое изделие ставим авторский логотип (клеймо) как знак качества и <br>
+                    узнаваемости мастера. Таким образом мастер несёт ответственность за каждое <br>
+                    изделие помеченное печатью. Есть гарантия на 12 месяцев. </p>
+                <img src="img/guarantee.svg" alt="guarantee">
+            </div>
         </section>
     </main>
     
@@ -136,18 +148,24 @@
 		<nav class="footer__nav">
 			<ul class="footer__nav__list">
 				<li class="footer__nav__item">
-                    <p>ИП Колодезников-Матчитов Н.И.</p>
-					<p>ИНН 143515646663</p>
+					<p>ИП Колодезников-Матчитов Н.И.</p>
+			        <p>ИНН 143515646663</p>
 				</li>
+			</ul>
+			<ul class="footer__nav__list">
 				<li><a class="footer__nav__item" href="master.html">Мастер-классы</a></li>
 				<li><a class="footer__nav__item" href="index.html">Мебель на заказ</a></li>
-				<li><a class="footer__nav__item" href="">Контакты</a></li>
+			</ul>
+			<ul class="footer__nav__list">
+				<li><a class="footer__nav__item" href="prototype.html">Контакты</a></li>
 				<li><a class="footer__nav__item" href="about.html">О нас</a></li>
+			</ul>
+			<ul class="footer__nav__list">		
 				<li><a class="footer__nav__item" href="">Политика кофиденциальности</a></li>
 				<li><a class="footer__nav__item" href="">Договор оферты</a></li>
 			</ul>
-			<div>	
-                <a href=""><img src="img/telegram.svg" alt="telegram"></a>												
+			<div class="footer_social_networks"> 													
+				<a href=""><img src="img/telegram.svg" alt="telegram"></a>												
 				<a href=""><img src="img/instagram.svg" alt="instagram"></a>
 				<a href=""><img src="img/whatsapp.svg" alt="whatsapp"></a>			
 		    </div>
